[tool.poetry]
name = "pluto"
version = "0.1.0"
description = ""
authors = ["Aaron Stephens <aaronjst93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
synapse = "^2.111.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
